# chomado_problem

./: Makefile  README.md  confirmation_exam.py  index.html  main.py  pyproject.toml  solution_31.py
